--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -22,8 +22,14 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run tests
-        run: pytest
+      - name: Run tests with coverage
+        run: |
+          coverage run -m pytest --maxfail=1 --disable-warnings -q
+          coverage report --fail-under=80
+          coverage html
+
+      - name: Upload coverage report to GitHub
+        uses: codecov/codecov-action@v3
 
   build-and-push:
     needs: test
