feat(models, processor, services): add message improvement functionality
- Added `improve` and `score_improve` fields to the `Message` model for enhanced text handling and scoring.
- Updated the `processor` to include message improvement logic:
  - Added a step for generating improved versions of messages.
  - Incorporated OpenAI's text improvement and evaluation methods.
  - Skips processing messages with low improvement scores.
- Extended the `OpenAIService` with new `get_improve` method for text improvement prompts.
- Updated configuration settings to include `min_score_improve` for improved message thresholds.
- Modified tests:
  - Added coverage for `get_improve` method in `OpenAIService`.
  - Included tests for improvement logic in `processor`.
  - Enhanced `Message` model tests to validate new fields.
- Updated container and configuration files to support the new `improve.txt` prompt.

--- a/.env.test
+++ b/.env.test
@@ -13,5 +13,5 @@ PROCESSOR_MIN_LEN=200
 PROCESSOR_MIN_ER=0.025
 PROCESSOR_MIN_SCORE=80
 PROCESSOR_MIN_SCORE_ALT=85
+PROCESSOR_MIN_SCORE_IMPROVE=85
 PROCESSOR_STOP_WORDS=эфир,запись,астролог,зодиак,таро,эзотери
-#LOG_LEVEL=DEBUG
